preventing panels from break on loading, preloader moved to bottom right corner

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -57,28 +57,17 @@ a, button {cursor: pointer;}
     line-height: normal;
   }
 }
-
-.preloader-container {
+.preloader {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0; right: 0; left: 0; bottom: 0;
-  background-color: rgba($brown, 0.7);
-  z-index: 9998;
-  .preloader {
-    position: absolute;
-    margin: auto;
-    z-index: 9999;
-    top: 0; right: 0; left: 0; bottom: 0;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-  }
+  z-index: 9999;
+  right: 0;  bottom: 0;
+  padding: 10px;
+  margin: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 1px 1px 6px $brown;
 }
 
-.preloader-height{
-  height: 40px;
-}
 // Map =======================
 
 .map-legend {
@@ -113,8 +102,20 @@ a, button {cursor: pointer;}
 .panel {
   border: 1px solid $brown-light;
   margin-bottom: 5px;
-  min-height: 299px;
+  min-height: 120px;
   .ng-table-pager {display: none;}
+  &.panel-login {
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+  .table {
+    margin: 0;
+    background-color: #fff;
+  }
+  .panel-content {
+    background-color: $brown;
+    min-height: 286px;
+  }
 }
 
 .panel-heading, .panel-footer {
